fix(quotes): add spacing between sprite elements for each speech bubble so it doesn't show white line of the next element in sprite

--- a/app/assets/stylesheets/base/settings.sass
+++ b/app/assets/stylesheets/base/settings.sass
@@ -51,8 +51,7 @@ $grid-padding  : 0px
 //  General Config
 $small-elements-spacing: 25px
 $companies-spacing: 10px
-// $companies-layout: smart
-$quotes-layout: smart
+$quotes-spacing: 10px
 
 // Construct map
 @import "small-elements/*.png"
